--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 <ul>
 	<li><a href="./testCode/index.html">进入测试入口</a></li>
+	<li><a href="https://m.liujunqi.github.io">universal links</a></li>
 </ul>
 </body>
 </html>
