--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <ul>
 	<li><a href="./testCode/index.html">进入测试入口</a></li>
 	<li><a href="https://m.liujunqi.github.io">universal links</a></li>
+	<li><a href="https://liujunqi.github.io/home/">universal links liujunqi.github.io/home/</a></li>
 </ul>
 </body>
 </html>
