--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<li><a href="./testschemecalltime.html">进入测试入口</a></li>
 	<li><a href="https://m.liujunqi.github.io">universal links</a></li>
 	<li><a href="https://liujunqi.github.io/home/">universal links liujunqi.github.io/home/</a></li>
+	<li><a href="https://liujunqi.github.io/testios12ajax/index.html">testios12ajax</a></li>
 </ul>
 </body>
 </html>
