--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<li><a href="https://m.liujunqi.github.io">universal links</a></li>
 	<li><a href="https://liujunqi.github.io/home/">universal links liujunqi.github.io/home/</a></li>
 	<li><a href="https://liujunqi.github.io/testios12ajax/index.html">testios12ajax</a></li>
+  <li><a href="https://liujunqi.github.io/testios12xmlhttprequest/index.html">testios12xmlhttprequest</a></li>
 </ul>
 </body>
 </html>
