--- a/testios12xmlhttprequest/index.html
+++ b/testios12xmlhttprequest/index.html
@@ -5,7 +5,7 @@
 	<title>测试iOS12 ajax</title>
 </head>
 <body>
-<script src="jquery-3.3.1.min.js"></script>
+<!-- <script src="jquery-3.3.1.min.js"></script> -->
 <script src="call_xmlhttprequest.js"></script>
 <!--<script type="text/javascript">-->
 <!--        document.write("Hello World!")-->
