--- a/testH5ToNAPerformance/index.html
+++ b/testH5ToNAPerformance/index.html
@@ -6,13 +6,19 @@
 	<meta name="apple-itunes-app" content="app-id=640199958, app- argument=https://developer.apple.com/wwdc/schedule, affiliate- data=optionalAffiliateData">
 </head>
 <body>
+    <script>
+        function testSendMessage()
+        {
+            window.webkit.messageHandlers.testH5ToNAPerformance.postMessage(this);
+        }
+        function testSchema()
+        {
+            document.location.href="testH5ToNAPerformance://test";
+        }
+        </script>
 <ul>
-	<li><a href="./testCode/index.html">进入测试入口</a></li>
-	<li><a href="./testschemecalltime.html">进入测试入口</a></li>
-	<li><a href="https://m.liujunqi.github.io">universal links</a></li>
-	<li><a href="https://liujunqi.github.io/home/">universal links liujunqi.github.io/home/</a></li>
-	<li><a href="https://liujunqi.github.io/testios12ajax/index.html">testios12ajax</a></li>
-  <li><a href="https://liujunqi.github.io/testios12xmlhttprequest/index.html">testios12xmlhttprequest</a></li>
+	<li><a href="javascript:void(0);" onclick="testSchema()">schema</a></li>
+	<li><a href="javascript:void(0);" onclick="testSendMessage()">postmessage</a></li>
 </ul>
 </body>
 </html>
