testH5ToNAPerformance-html

--- a/testH5ToNAPerformance/index.html
+++ b/testH5ToNAPerformance/index.html
@@ -3,13 +3,12 @@
 <head>
 	<meta charset="utf-8" />
 	<title>测试DEMO</title>
-	<meta name="apple-itunes-app" content="app-id=640199958, app- argument=https://developer.apple.com/wwdc/schedule, affiliate- data=optionalAffiliateData">
 </head>
 <body>
     <script>
         function testSendMessage()
         {
-            window.webkit.messageHandlers.testH5ToNAPerformance.postMessage(this);
+            window.webkit.messageHandlers.testH5ToNAPerformance.postMessage();
         }
         function testSchema()
         {
