--- a/testH5ToNAPerformance/index.html
+++ b/testH5ToNAPerformance/index.html
@@ -8,7 +8,7 @@
     <script>
         function testSendMessage()
         {
-            window.webkit.messageHandlers.testH5ToNAPerformance.postMessage();
+            window.webkit.messageHandlers.testH5ToNAPerformance.postMessage("");
         }
         function testSchema()
         {
