--- a/testH5ToNAPerformance/index.html
+++ b/testH5ToNAPerformance/index.html
@@ -14,10 +14,21 @@
         {
             document.location.href="testH5ToNAPerformance://test";
         }
+        function testSendMessageHaveTime()
+        {
+            var time = new Date();
+            window.webkit.messageHandlers.testH5ToNAPerformance.postMessage({“time”:time});
+        }
+        function testSchemaHaveTime()
+        {
+            document.location.href="testH5ToNAPerformance://test";
+        }
         </script>
 <ul>
 	<li><a href="javascript:void(0);" onclick="testSchema()">schema</a></li>
-	<li><a href="javascript:void(0);" onclick="testSendMessage()">postmessage</a></li>
+    <li><a href="javascript:void(0);" onclick="testSendMessage()">postmessage</a></li>
+    <li><a href="javascript:void(0);" onclick="testSchemaHaveTime()">schemahavetime</a></li>
+    <li><a href="javascript:void(0);" onclick="testSendMessageHaveTime()">postmessagehavetime</a></li>
 </ul>
 </body>
 </html>
