--- a/testH5ToNAPerformance/index.html
+++ b/testH5ToNAPerformance/index.html
@@ -17,7 +17,7 @@
         function testSendMessageHaveTime()
         {
             var time = new Date();
-            window.webkit.messageHandlers.testH5ToNAPerformance.postMessage({“time”:time});
+            window.webkit.messageHandlers.testH5ToNAPerformance.postMessage({'time':time});
         }
         function testSchemaHaveTime()
         {
