--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8" />
 	<title>测试DEMO</title>
-	<meta name="apple-itunes-app" content="app-id=640199958, app- argument=https://developer.apple.com/wwdc/schedule, affiliate- data=optionalAffiliateData">
+<!-- 	<meta name="apple-itunes-app" content="app-id=640199958, app- argument=https://developer.apple.com/wwdc/schedule, affiliate- data=optionalAffiliateData"> -->
+	<meta name="apple-itunes-app" content="app-clip-bundle-id=com.liujunqi.testappclip.searchclip, app-id=123456789">
 </head>
 <body>
 <ul>
