--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
 	<title>测试DEMO v1</title>
 <!-- 	<meta name="apple-itunes-app" content="app-id=640199958, app- argument=https://developer.apple.com/wwdc/schedule, affiliate- data=optionalAffiliateData"> -->
-	<meta name="apple-itunes-app" content="app-clip-bundle-id=com.liujunqi.testappclip.searchclip, app-id=123456789">
+	<meta name="apple-itunes-app" content="app-clip-bundle-id=com.monsterhub.walletpass.AppClip, app-id=1535953762">
 </head>
 <body>
 <ul>
