--- a/home/index.html
+++ b/home/index.html
@@ -3,11 +3,13 @@
 <head>
 	<meta charset="utf-8" />
 	<title>home</title>
-	<meta name="apple-itunes-app" content="app-id=640199958, app- argument=https://developer.apple.com/wwdc/schedule, affiliate- data=optionalAffiliateData">
+	<!-- 1535953762 -->
+	<!--<meta name="apple-itunes-app" content="app-id=640199958, app- argument=https://developer.apple.com/wwdc/schedule, affiliate- data=optionalAffiliateData"> -->
+	
 </head>
 <body>
 <ul>
-	<li><a href="https://liujunqi.github.io">back</a></li>
+	<li><a href="https://Samiboy63.github.io/Reop/">back</a></li>
 </ul>
 </body>
 </html>
