--- a/home/index.html
+++ b/home/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
 	<title>home</title>
 	<!-- 1535953762 -->
-	<!--<meta name="apple-itunes-app" content="app-id=640199958, app- argument=https://developer.apple.com/wwdc/schedule, affiliate- data=optionalAffiliateData"> -->
+	<meta name="apple-itunes-app" content="app-id=1535953762, app- argument=https://developer.apple.com/wwdc/schedule, affiliate- data=optionalAffiliateData">
 	
 </head>
 <body>
